# sql_project

./: .gitignore  Procfile  config.py  create.sql  log.txt  preparations_db.sh  pyproject.toml  readme.md  wsgi.py
app/: __init__.py
app/main/: forms.py  services.py  views.py
app/templates/: basic.html
scripts/: coach.csv  create.sql  fill.sql  procedure.sql  triggers.sql
shlak/: тз.txt
