[tool.poetry]
name = "sql_project"
version = "0.1.0"
description = ""
authors = ["MickiMouse <495lolkek42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pymysql = "^0.10.1"
wtforms = "^2.3.3"
black = "^20.8b1"
cryptography = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
